# redshadeutils

./: Cargo.toml
src/: aseprite.rs  packer.rs  wl_atlas.rs
test_data/packer/: index.yaml  prout.ase.json
