[package]
name = "redshadeutils"
version = "0.1.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"

zip = "0.5"
png = "0.16.8"

[[bin]]
name = "packer"
path = "src/packer.rs"
